# su-cli

./: .env  .gitignore  README.md  autocomplete.py  main.py  pyproject.toml
agents/a_simple_agent_quickstart/: .env.example  .gitignore  MCP_USAGE.md  README.md  TEST_README.md  pyproject.toml  test_agent.py  test_file_operations.py  test_interrupt.py  test_mcp_flow.py  test_quick.py  test_smart_routing.py
agents/a_simple_agent_quickstart/src/agent/: __init__.py  graph.py  prompts.py  state.py  tools.py  utils.py
agents/default/: .gitignore  README.md  README_CN.md  README_MCP.md  mcp_config.json  simple_mcp_test.py  test_desktop_query.py  test_mcp.py  test_tool_direct.py
agents/default/src/agent/: graph.py  mcp_utils.py  prompts.py  tools.py
core/: core.py  test_agent_call.py
