[project]
name = "a-simple-agent-quickstart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain[openai]>=0.3.25",
    "langgraph>=0.4.8",
    "langgraph-cli[inmem]>=0.3.3",
    "mcp>=0.6.0",
    "langchain-mcp-adapters>=0.1.5",
]
